# m9

./: README.md  main.py  pyproject.toml
baseimage/openresty1214/: Dockerfile
baseimage/python310/: Dockerfile  sources.list
baseimage/redis705/: Dockerfile
baseimage/unitpy310/: Dockerfile
scripts/: batch.sh
template/blank/.m9/: Makefile  project.json
template/pysvc/: .gitignore  entrypoint.sh  pyproject.toml
template/pysvc/.m9/: Makefile  project.json
template/redissvc/: .gitignore  redis.conf
template/redissvc/.m9/: Makefile  project.json
template/springjavasvc/: .gitignore  settings.xml
template/springjavasvc/.m9/: Makefile
template/springjavasvc/config/: application-prod.yml  application-test.yml
template/unitpyapi/: .gitignore  pyproject.toml
template/unitpyapi/.m9/: Dockerfile  Makefile  entrypoint.sh  project.json
template/unitpyapi/unit/: config.json
template/unitpyhttpsvc/.m9/: Makefile
template/uwsgipyapi/: .gitignore  pyproject.toml
template/uwsgipyapi/.m9/: Makefile  project.json
template/uwsgipyapi/wsgi/: ewsgi.py  main.py
template/uwsgipyhttpsvc/: .gitignore
template/uwsgipyhttpsvc/.m9/: Makefile
template/uwsgipyhttpsvc/uwsgi/: config.yaml
